--- a/css/basic.css
+++ b/css/basic.css
@@ -1,38 +1,54 @@
 body {background-color: #FFF;}
 
 /* Layout all box */
-#headcontent, #container, #header, #navigation, #content, #footer 
-{z-index:100; overflow:auto;}
+#headcontent, #container, #header, #navigation, #content, #footer  {z-index:100; overflow:auto;}
 
 /* Layout single box */
 #header     {    width:  100%;                              background-color: #F7F7F7;}
-#headcontent{max-width: 960px; height:50px; margin: 0 auto; background-color: #C2C2C2;}
+#headcontent{max-width: 960px; margin: 0 auto; background-color: #C2C2C2;}
 #container  {max-width: 958px;              margin: 0 auto;                             border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
-#navigation {    width: 170px; float: left; padding:10px;}
-#content    {    width: 506px; float: left; padding:10px;                               border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
-#aside      {    width: 220px; float: left; padding:10px;}
-#footer     {max-width: 958px; height:50px; clear: both;    background-color: #C2C2C2;}
-
+#navigation {    width: 139px; float: left; padding:10px;}
+#content    {    width: 538px; float: left; padding:10px;                               border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
+#aside      {    width: 219px; float: left; padding:10px;}
+#footer     {max-width: 958px; clear: both; padding:10px;   background-color: #C2C2C2;}
 
 /* Headcontent */
-#logotype {height: 50px; float:left; margin-left:30px;}
-h1 {margin:10px 10px 10px 30px; float:left; font-size:2em;}
+#logotype {width: 70px; float:left; margin-left:30px;}
 #headcontent p {float: right; margin: 30px 30px 0 0;}
 
 /* Navigation */
-#navigation li a {display: block; padding: 10px 20px; background-color:#F7F7F7; text-decoration:none; margin-bottom:10px;}
-#navigation li a:hover, #thisSide .thisSide {background-color: #C2C2C2;}
+#navigation li a {display: block; padding: 10px 20px; background-color:#F7F7F7; margin-bottom:10px;}
 
 /* Content */
-article {width:456px; padding-bottom: 20px; margin:0 auto;}
-article header {width:400px; margin:0 auto;}
-article header footer {margin-bottom: 10px; padding-top:10px; border-top:solid 1px;}
-
-h3 {font-size:1.5em; text-align:center; padding-bottom:5px;}
+article {width:100%; padding-bottom: 20px; margin:0 auto;}
+article footer {float:right;}
 
 /* Aside */
-#aside img {width: 100%;}
 
 /* Footer */
 
-/* Typografi */
+/* Typography */
+p {margin-bottom:5px; text-align:justify;}
+
+h1 {font-size:2em; margin:10px 10px 10px 30px; float:left; }
+h2 {font-size:2em; margin-bottom:10px; padding-bottom:5px; text-align:center; border-bottom:solid 1px;}
+h3 {font-size:1.5em; margin:10px 0; padding: 5px; clear:both; text-align:center; font-weight:bold; background-color: #E0E0E0;}
+
+a {text-decoration:none; color: black; background-color: #F7F7F7;}
+#navigation li a:hover, a:hover, #thisSide .thisSide {background-color: #C2C2C2;}
+article footer {font-style: italic;}
+
+/* Media */
+img, video, svg { width: 100%; overflow:auto;}
+figure {margin-bottom:10px;}
+.left  {width: 60%; margin-right: 10px; float:left;}
+.right {width: 60%; margin-left: 10px; float:right;}
+
+
+/* Color 
+#FFF        White
+#F7F7F7     Gray (light)
+#E0E0E0     Gray
+#C2C2C2     Gray (dark)
+#000        Black
+*/ 
