--- a/css/basic.css
+++ b/css/basic.css
@@ -1,7 +1,7 @@
 body {background-color: #FFF;}
 
 /* Layout all box */
-#headcontent, #container, #header, #navigation, #content, #footer  {z-index:100; overflow:auto;}
+#headcontent, #container, #header, #navigation, #content, #footer {z-index:100; overflow:auto;}
 
 /* Layout single box */
 #header     {    width:  100%;                              background-color: #F7F7F7;}
@@ -14,12 +14,13 @@ body {background-color: #FFF;}
 
 /* Headcontent */
 .logo {width: 70px; height: 70px; display: block; float:left; margin-left:30px; background-image: url(pics/logo.jpg);}
-#headcontent p {float: right; margin: 30px 30px 0 0; }
+#headcontent p {display:block; width:219px; float: right; margin: 50px 10px 0 10px; text-align:center;}
 
 /* Navigation */
 #navigation li a {display: block; padding: 10px 20px; background-color:#F7F7F7; margin-bottom:10px;}
 
 /* Content */
+.post {width: 20px; height: 20px; display: block; float:left; margin: 0 20px; background-image: url(pics/post.jpg);}
 article {width:100%; padding-bottom: 20px; margin:0 auto;}
 article footer {float:right;}
 
@@ -30,9 +31,9 @@ article footer {float:right;}
 /* Typography */
 p {margin-bottom:5px; text-align:justify;}
 
-h1 {font-size:2em; margin:10px 10px 10px 30px; float:left; }
-h2 {font-size:2em; margin-bottom:10px; padding-bottom:5px; text-align:center; border-bottom:solid 1px;}
-h3 {font-size:1.5em; margin:10px 0; padding: 5px; clear:both; text-align:center; font-weight:bold; background-color: #E0E0E0;}
+h1 {font-size:2.00em; margin:19px 10px 19px 30px; float:left; }
+h2 {font-size:1.50em; margin-bottom:10px; padding-bottom:5px; text-align:center; border-bottom:solid 1px;}
+h3 {font-size:1.25em; margin:10px 0 10px 0; padding: 5px; clear:both; font-weight:bold; background-color: #E0E0E0;}
 
 a {text-decoration:none; color: black; background-color: #E8E8E8;}
 #navigation li a:hover, a:hover, #thisSide .thisSide {background-color: #C2C2C2;}
