--- a/css/basic.css
+++ b/css/basic.css
@@ -1,19 +1,19 @@
 body {background-color: #FFF;}
 
 /* Layout all box */
-#headcontent, #container, #header, #navigation, #content, #footer {z-index:100; overflow:auto;}
+#headcontent, #container, #header, #navigation, #content, #aside #footer {z-index:100; overflow:auto;}
 
 /* Layout single box */
-#header     {    width:  100%;                              background-color: #F7F7F7;}
+#header     {    width:  100%;                 background-color: #F7F7F7;}
 #headcontent{max-width: 960px; margin: 0 auto; background-color: #C2C2C2;}
-#container  {max-width: 958px;              margin: 0 auto;                             border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
+#container  {max-width: 958px; margin: 0 auto;              border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
 #navigation {    width: 139px; float: left; padding:10px;}
-#content    {    width: 538px; float: left; padding:10px;                               border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
+#content    {    width: 538px; float: left; padding:10px;   border-left: solid 1px; border-right: solid 1px; border-color: #C2C2C2;}
 #aside      {    width: 219px; float: left; padding:10px;}
 #footer     {max-width: 958px; clear: both; padding:10px;   background-color: #C2C2C2;}
 
 /* Headcontent */
-.logo {width: 70px; height: 70px; display: block; float:left; margin-left:30px; background-image: url(pics/logo.jpg);}
+.logo {width: 70px; height: 70px;  float:left; margin-left:30px; background-image: url(pics/logo.jpg);}
 #headcontent p {display:block; width:219px; float: right; margin: 50px 10px 0 10px; text-align:center;}
 
 /* Navigation */
@@ -23,7 +23,7 @@ body {background-color: #FFF;}
 /* Content */
 .post {width:20px; height:20px; display:block; float:left; margin-right: 20px; background-image: url(pics/post.jpg);}
 article {width:100%; padding-bottom: 20px; margin:0 auto; clear:both;}
-article footer {float:right; font-style: italic;}
+article footer {float:right; font-style: italic; margin-top:10px;}
 #content a {display:inline; padding: 0 5px;}
 
 #content li, dt {list-style-position:outside; margin: 15px 0 0 30px;}
@@ -56,7 +56,7 @@ h4 {font-size:1.25em; font-weight:bold; text-align:center;}
 
 /* Media */
 figcaption {font-size:0.9em; text-align:justify; font-style: italic; padding:0 5px;}
-img, video, svg { width: 100%; overflow:auto; margin-top:10px;}
+img, video, svg {width: 100%; overflow:auto; margin-top:10px;}
 .left  {width: 60%; margin-right: 10px; float:left;}
 .right {width: 60%; margin-left: 10px; float:right;}
 
